server actions and newsletter widget done.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sugar-high": "^0.7.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
